--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ html {
 
   <div class="col-6 col-s-9">
     <h1>A description of yourself</h1>
-    <h2>Nothing to say</h2>
+    <h2>YATORO</h2>
   </div>
 
   <div class="col-3 col-s-12">
